
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int size; scalar_t__ data; scalar_t__ end; scalar_t__ p; } ;
typedef TYPE_1__* STREAM ;


 TYPE_1__ out ;

STREAM
tcp_init(int maxlen)
{
 if (maxlen > out.size)
 {
  out.size = maxlen;
 }

 out.p = out.data;
 out.end = out.data + out.size;
 return &out;
}
